完善优化迁移的 classgraph 项目,完善注释,更改json依赖为jackson